force-app/main/default/objects/GoogleDriveAuth__c/GoogleDriveAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Google Drive Auth</label>
</CustomObject>