force-app/main/default/objects/GoogleDriveAuth__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>