force-app/main/default/objects/GoogleDriveAuth__c/fields/OppDisableSync__c.field-meta.xml
<CustomField>
    <fullName>OppDisableSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Opp CSV export to GDrive</description>
    <label>OppDisableSync</label>
    <type>Checkbox</type>
</CustomField>