force-app/main/default/objects/GoogleDriveAuth__c/fields/OppParentFolderEId__c.field-meta.xml
<CustomField>
    <fullName>OppParentFolderEId__c</fullName>
    <description>Google Drive Id of folder, where Opportunity folder structure should be created.</description>
    <inlineHelpText>Google Drive Id of folder, where Opportunity folder structure should be created.</inlineHelpText>
    <label>Opp Parent Folder EID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>