force-app/main/default/objects/GoogleDriveAuth__c/fields/OppSyncFolderEId__c.field-meta.xml
<CustomField>
    <fullName>OppSyncFolderEId__c</fullName>
    <description>Google Drive Folder Id, to which Opportunty CSV file will be saved.</description>
    <inlineHelpText>Google Drive Folder Id, to which Opportunty CSV file will be saved.</inlineHelpText>
    <label>Opp Sync Folder EID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>