force-app/main/default/objects/GoogleDriveAuth__c/fields/OppSyncLastRun__c.field-meta.xml
<CustomField>
    <fullName>OppSyncLastRun__c</fullName>
    <description>Datetime of last successful run of opportunity CSV Export. This date will be used as threshold for next run.</description>
    <inlineHelpText>Datetime of last successful run of opportunity CSV Export. This date will be used as threshold for next run.</inlineHelpText>
    <label>Opp Sync Last Run</label>
    <type>DateTime</type>
</CustomField>