force-app/main/default/objects/GoogleDriveAuth__c/fields/ProdSyncFolderEID__c.field-meta.xml
<CustomField>
    <fullName>ProdSyncFolderEID__c</fullName>
    <label>Prod Sync Folder EID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>