force-app/main/default/objects/GoogleDriveAuth__c/fields/RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>RedirectURI__c</fullName>
    <label>Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>